# aircraft-service

./: .gitignore  README.md  aircraft-service.cabal  stack.yaml
app/: Main.hs
config/: application.yml
misc/: aircraft-service.postman_collection.json  notes.txt
src/: Api.hs  Client.hs  Config.hs  Db.hs  Ios.hs  Models.hs  Scratch.hs  scratch.hs
src/Api/: Aircraft.hs  Model.hs
test/: ApiSpec.hs  DbSpec.hs  Spec.hs
test/Api/: AircraftSpec.hs
