name:                aircraft-service
version:             0.1.0.0
synopsis:
description:
license:             MIT
license-file:        LICENSE
author:              
maintainer:          
copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.18

source-repository head
    type:
        git
    location:
        https://www.github.com/not_yet_there

executable aircraft-service
    main-is:
        Main.hs
    build-depends:
        base >=4.7 && <4.9
      , aircraft-service
      , persistent-postgresql
      , wai
      , warp
      , monad-logger
      , safe
    hs-source-dirs:
        app   
    default-language:
        Haskell2010

library
    default-language:
        Haskell2010
    hs-source-dirs:
        src
    exposed-modules:
        Config
      , Models
      , Api
      , Api.User
    build-depends: 
        base >= 4.7 && < 4.9
      , aeson
      , bytestring
      , monad-control
      , monad-logger
      , mtl
      , persistent
      , persistent-postgresql
      , persistent-template
      , servant >= 0.7 && < 0.8
      , servant-js >= 0.7 && < 0.8
      , servant-server >= 0.7 && < 0.8
      , transformers
      , wai
      , wai-extra
      , warp


test-suite servant-persistent-test
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Spec.hs
    other-modules:
        ApiSpec
    build-depends:
        base
      , servant-persistent
      , QuickCheck
      , hspec
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N
    default-language:
        Haskell2010
