name:                aircraft-service
version:             0.1.0.0
synopsis:
description:
license:             MIT
license-file:        LICENSE
author:              
maintainer:          
copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.18

source-repository head
    type:
        git
    location:
        https://www.github.com/not_yet_there

executable aircraft-service
    main-is:
        Main.hs
    build-depends:
                  base
                , aircraft-service


    hs-source-dirs:
        app   
    default-language:
        Haskell2010

library
    default-language:
        Haskell2010
    hs-source-dirs:
        src
    exposed-modules:
                    Config
                  , Client
                  , Db
                  , Ios
                  , Models
                  , Scratch
                  , Api
                  , Api.Aircraft
    build-depends: 
                   base
                 , aeson
                 , assert
                 , async
                 , bytestring
                 , directory
                 , exceptions
                 , http-client
                 , monad-control
                 , monad-logger
                 , mtl
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , safe
                 , servant
                 , servant-js
                 , servant-server
                 , servant-client
                 , text           
                 , transformers
                 , wai
                 , wai-extra
                 , warp
                 , yaml


test-suite aircraft-service-test
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
                   test
    main-is:
            Spec.hs
    other-modules:
                  ApiSpec
                  Api.AircraftSpec
                  DbSpec
    build-depends:
                  base
                , aircraft-service
                , QuickCheck
                , hspec
                , http-client
                , persistent
                , persistent-postgresql
                , servant-client
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N
    default-language:
        Haskell2010
